--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -150,6 +150,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Classes\algorithm_practice_astar_CostMapNode.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostMapNodeScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostNode.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostNodeScene.cpp" />
@@ -437,6 +438,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Classes\algorithm_practice_astar_CostMapNode.h" />
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostMapNodeScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostNode.h" />
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostNodeScene.h" />
