--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -903,9 +903,6 @@
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp">
       <Filter>src\scene\algorithm_practice\floodfill</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.cpp">
-      <Filter>src\scene\algorithm_practice\floodfill</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp">
       <Filter>src\scene\algorithm_practice\floodfill</Filter>
     </ClCompile>
@@ -1094,6 +1091,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostMapNode.cpp">
       <Filter>src\scene\algorithm_practice\astar</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_Grid4TileMap.cpp">
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1799,9 +1799,6 @@
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h">
       <Filter>src\scene\algorithm_practice\floodfill</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.h">
-      <Filter>src\scene\algorithm_practice\floodfill</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h">
       <Filter>src\scene\algorithm_practice\floodfill</Filter>
     </ClInclude>
@@ -1996,6 +1993,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostMapNode.h">
       <Filter>src\scene\algorithm_practice\astar</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_Grid4TileMap.h">
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
