--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -155,6 +155,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostNode.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostNodeScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_EditorNode.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_astar_Grid4TileMap.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_ProcessorNode.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_RootScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_astar_TestScene.cpp" />
@@ -441,6 +442,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\algorithm_practice_astar_EditorNode.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_astar_Grid4TileMap.h" />
     <ClInclude Include="..\Classes\algorithm_practice_astar_NodeAStar.h" />
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostMapNode.h" />
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostMapNodeScene.h" />
