--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1104,6 +1104,12 @@
     <ClCompile Include="..\Classes\algorithm_practice_astar_Grid4TileMap.cpp">
       <Filter>src\scene\algorithm_practice\astar</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cpg_Direction8.cpp">
+      <Filter>src\cpg</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_astar_Direction8Scene.cpp">
+      <Filter>src\scene\algorithm_practice\astar</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -2016,6 +2022,12 @@
       <Filter>src\scene\algorithm_practice\astar</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_astar_Grid4TileMap.h">
+      <Filter>src\scene\algorithm_practice\astar</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_Direction8.h">
+      <Filter>src\cpg</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_astar_Direction8Scene.h">
       <Filter>src\scene\algorithm_practice\astar</Filter>
     </ClInclude>
   </ItemGroup>
