--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1107,6 +1107,9 @@
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_Direction4Scene.cpp">
       <Filter>src\scene\algorithm_practice\floodfill</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cocos_research_render_SequenceScene.cpp">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -2026,6 +2029,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_Direction4Scene.h">
       <Filter>src\scene\algorithm_practice\floodfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cocos_research_render_SequenceScene.h">
+      <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
