--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1116,6 +1116,9 @@
     <ClCompile Include="..\Classes\cocos_research_render_Prerender2Scene.cpp">
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cocos_research_render_CameraNode.cpp">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -2043,6 +2046,9 @@
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cocos_research_render_Prerender2Scene.h">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cocos_research_render_CameraNode.h">
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
   </ItemGroup>
