add scene : cocos_research_image - BasicScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1125,6 +1125,9 @@
     <ClCompile Include="..\Classes\cocos_research_image_PNGScene.cpp">
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cocos_research_image_BasicScene.cpp">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -2061,6 +2064,9 @@
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cocos_research_image_PNGScene.h">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cocos_research_image_BasicScene.h">
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
   </ItemGroup>
