--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -175,6 +175,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\algorithm_practice_loophero_TrimScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\cocos_research_image_BasicScene.cpp" />
     <ClCompile Include="..\Classes\cocos_research_image_PNGScene.cpp" />
     <ClCompile Include="..\Classes\cocos_research_particle_BasicScene.cpp" />
     <ClCompile Include="..\Classes\cocos_research_render_CameraNode.cpp" />
@@ -476,6 +477,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\algorithm_practice_loophero_TrimScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\cocos_research_image_BasicScene.h" />
     <ClInclude Include="..\Classes\cocos_research_image_PNGScene.h" />
     <ClInclude Include="..\Classes\cocos_research_particle_BasicScene.h" />
     <ClInclude Include="..\Classes\cocos_research_render_CameraNode.h" />
